library/general/requiredannotations/samples/all-must-have-certain-set-of-annotations/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: all-must-have-certain-set-of-annotations
spec:
  match:
    kinds:
      # Apply to standard Deployments
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      # Apply to Argo Rollouts
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
  parameters:
    message: "All services must have a `a8r.io/owner` and `a8r.io/runbook` annotations."
    annotations:
      # - key: a8r.io/owner
      #   # Matches email address or github user
      #   allowedRegex: ^([A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,6}|[a-z]{1,39})$
      # - key: a8r.io/runbook
      #   # Matches urls including or not http/https
      #   allowedRegex: ^(http:\/\/www\.|https:\/\/www\.|http:\/\/|https:\/\/)?[a-z0-9]+([\-\.]{1}[a-z0-9]+)*\.[a-z]{2,5}(:[0-9]{1,5})?(\/.*)?$
      - key: sonarqube-scan
        allowedRegex: "^success$"
